Bug 1988195 - Clear style cache on layout.css.* pref changes. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D264671